# CS4050-hw2-mjdqw5-sgsqb4

./: .gitignore  README.md
hw2/: .gitignore  CMakeLists.txt  a.out  a.txt  hw2  input1.txt  input3.txt  input_error.h  mjdqw5_sgsqb4  mjdqw5_sgsqb4.c  mjdqw5_sgsqb4_hw2.c  mjdqw5_sgsqb5_hw2.c
hw2/a.out.dSYM/Contents/Resources/DWARF/: a.out
hw2/src/: main.c  mjdqw5_sgsqb4_hw2.c
hw2/test/: tests.cpp
